--- a/clusters/my-cluster/kustomization.yml
+++ b/clusters/my-cluster/kustomization.yml
@@ -5,7 +5,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # Add this line to include your new app's Kustomization CR
-  - whoami-app.yaml
+  - whoami-app.yml
   
   # If you had another app, you'd add its file here too:
   # - grafana-app.yaml
