--- a/clusters/my-cluster/kustomization.yml
+++ b/clusters/my-cluster/kustomization.yml
@@ -5,7 +5,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # Add this line to include your new app's Kustomization CR
-  - whoami-app.yml
-  
+  - ./flux-system
+  - ./namespaces/namespace.yml 
   # If you had another app, you'd add its file here too:
+  - whoami-app.yml
   # - grafana-app.yaml
