--- a/clusters/my-cluster/my-react-app-controller.yml
+++ b/clusters/my-cluster/my-react-app-controller.yml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: my-react-app-deploy
+  name: my-react-app
   namespace: flux-system
 spec:
   sourceRef:
