--- a/clusters/my-cluster/apps/my-react-app/service.yml
+++ b/clusters/my-cluster/apps/my-react-app/service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: my-react-app-svc
-  namespace: apps
+  namespace: default 
 spec:
   selector:
     app: my-react-app
