--- a/apps/react-app/deployment.yml
+++ b/apps/react-app/deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: react-app
-          image: skoopy365/my-react-app:latest
+          image: skoopy365/my-react-app:20250614-034504
           ports:
             - containerPort: 80
 
