--- a/apps/react-app/deployment.yml
+++ b/apps/react-app/deployment.yml
@@ -18,6 +18,7 @@ spec:
       containers:
         - name: react-app
           image: skoopy365/my-react-app:20250614-034504
+          # {"$imagepolicy": "my-react-app:react-app-policy"}
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 80
