--- a/apps/react-app/kustomization.yml
+++ b/apps/react-app/kustomization.yml
@@ -5,6 +5,6 @@ resources:
   - image-policy.yaml
   - skoopy-registry.yml
   - image-update-automation.yml
-images:
-  - name: skoopy365/my-react-app
-    newTag: use-latest  
+#images:
+#- name: skoopy365/my-react-app
+#    newTag: use-latest  
