--- a/apps/react-app/deployment.yml
+++ b/apps/react-app/deployment.yml
@@ -17,8 +17,6 @@ spec:
     spec:
       containers:
         - name: react-app
-          image: skoopy365/my-react-app:20250614-034504
-          # {"$imagepolicy": "my-react-app:react-app-policy"}
-          imagePullPolicy: IfNotPresent
+          image: skoopy365/my-react-app:latest
           ports:
             - containerPort: 80
