--- a/apps/react-app/image-update-automation.yml
+++ b/apps/react-app/image-update-automation.yml
@@ -18,6 +18,6 @@ spec:
         email: flux@yourdomain.com
       messageTemplate: "chore: update react-app image to {{ .Image.Tag }}"
   update:
-    path: ./apps/react-app
+    path: ./
     strategy: Setters 
 
