--- a/apps/react-app/image-update-automation.yml
+++ b/apps/react-app/image-update-automation.yml
@@ -16,8 +16,7 @@ spec:
       author:
         name: Flux Bot
         email: flux@yourdomain.com
-      messageTemplate: 'chore: update {{ .AutomationObject.name }} to {{ .Update.ImageTag }}' 
+      messageTemplate: 'chore: update image to {{ .Update.ImageTag }}' 
   update:
     path: ./apps/react-app
     strategy: Setters 
-
