--- a/apps/react-app/image-update-automation.yml
+++ b/apps/react-app/image-update-automation.yml
@@ -4,7 +4,7 @@ metadata:
   name: react-app-auto
   namespace: flux-system
 spec:
-  interval: 1m
+  interval: 10s
   sourceRef:
     kind: GitRepository
     name: flux-system
