--- a/apps/react2/ingress-tls-terraform.yml
+++ b/apps/react2/ingress-tls-terraform.yml
@@ -13,21 +13,26 @@ spec:
   dnsNames:
   - "react2.run.place"
 ---
-apiVersion: traefik.io/v1alpha1
-kind: IngressRoute
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  name: react2-route
-  namespace: default
+  name: react2
+  annotations:
+    cert-manager.io/cluster-issuer: "acme-issuer"
 spec:
-  entryPoints:
-    - websecure 
-  routes:
-    - match: Host(`react2.run.place`)
-      kind: Rule
-      services:
-        - kind: Service
-          name: react2
-          port: 80
-          namespace: default
+  ingressClassName: haproxy
   tls:
-    secretName: cert-react2
+    - hosts:
+        - react2.run.place
+      secretName: cert-react2
+  rules:
+    - host: react2.run.place
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: react2
+                port:
+                  number: 80
