--- a/apps/react-app/ingress-tls-terraform.yml
+++ b/apps/react-app/ingress-tls-terraform.yml
@@ -59,6 +59,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: react-app
+  namespace: defaul
   annotations:
     cert-manager.io/cluster-issuer: "acme-issuer"
 spec:
