--- a/apps/react2/ingress-tls-terraform.yml
+++ b/apps/react2/ingress-tls-terraform.yml
@@ -17,6 +17,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: react2
+  namespace: default
   annotations:
     cert-manager.io/cluster-issuer: "acme-issuer"
 spec:
