--- a/apps/react2/deployment.yml
+++ b/apps/react2/deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: react2
-          image: skoopy365/react2:20250622-062154 # {"$imagepolicy": "flux-system:react2-policy"}
+          image: skoopy365/react2:20250622-062154 # {"$imagepolicy": "flux-system:react2-app-policy"}
           ports:
             - containerPort: 3001
           envFrom:
