--- a/apps/react2/image-policy.yaml
+++ b/apps/react2/image-policy.yaml
@@ -7,8 +7,8 @@ spec:
   imageRepositoryRef:
     name: react2
   policy:
-    alphabetical:
-      order: desc
-  #  filterTags:
-  #    pattern: '^\\d{8}-\\d{6}$'
-  #    extract: '$0'  
+  alphabetical:
+    order: asc
+  filterTags:
+    pattern: '^\\d{8}-\\d{6}$'
+    extract: '$0'
