--- a/apps/react2/image-policy.yaml
+++ b/apps/react2/image-policy.yaml
@@ -7,8 +7,4 @@ spec:
   imageRepositoryRef:
     name: react2
   policy:
-  alphabetical:
-    order: asc
-  filterTags:
-    pattern: '^\\d{8}-\\d{6}$'
-    extract: '$0'
+    latest: {}
