--- a/apps/react2/image-policy.yaml
+++ b/apps/react2/image-policy.yaml
@@ -6,9 +6,8 @@ metadata:
 spec:
   imageRepositoryRef:
     name: react2
-  filterTags:
-    pattern: '^2025\.\d+\.\d+.*$'
-    extract: '$0'
   policy:
     semver:
-      range: '>=2025.0.0' 
+      range: ">=0.0.0"  # Allow all semver, or adjust if needed
+  filterTags:
+    pattern: '^alpha\.'  
